--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,17 +15,54 @@ body {
     font-weight: weight;
     font-style: normal;
 }
+.custom-alert {
+  display: none; /* Oculta el mensaje por defecto */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #6e0f0f;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  z-index: 1000;
+  width: 250px;
+  height: 210px;
+}
+
+.custom-alert p {
+  margin: 0 0 15px 0;
+  font-size: 18px;
+  margin-top: 50px;
+}
+
+.custom-alert button {
+  background-color: #11339b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.custom-alert button:hover {
+  background-color: #041752;
+}
 .container{
     display: flex;
     justify-content: center;
     align-items:center;
     width: 100%;
     height: 80%;
-    margin-top: -200px;
+    margin-top: -210px;
 }
 img{
     width: 150px;
     height: auto;
+    margin-top: 50px;
 
 }
 
@@ -35,7 +72,7 @@ img{
     flex-direction: column;
     align-items: center; 
     gap: 10px; /* Espacio entre botones */
-    margin-top: -100px;
+    margin-top: -110px;
     
 } 
 
@@ -55,14 +92,14 @@ img{
 
  button:hover {
     transform: scale(1.1);
-    background-color:#705feb;
+    background-color:#a71a60;
   }
   
   /* Botón seleccionado */
   button:active {
     transform: scale(1.3);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    background-color:#5743ee;
+    background-color:#721343;
     
   }
  
