--- a/CSS/style_entradas.css
+++ b/CSS/style_entradas.css
@@ -62,18 +62,18 @@ button {
 
 button:hover {
   transform: scale(1.1);
-  background-color: #705feb;
+  background-color: #a71a60;
 }
 
 button:active {
   transform: scale(1.3);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  background-color: #5743ee;
+  background-color: #721343;
 }
 
 /* Estilo general para la tabla */
 .table-container {
-  width: 100%;
+  width: 90%;
   overflow-x: auto; /* Permite el desplazamiento horizontal */
   padding: 10px; /* Espaciado para que la tabla no toque los bordes */
   margin-top: 20px;
@@ -90,6 +90,7 @@ table {
   font-family: "Roboto", sans-serif;
   text-align: left;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  
 }
 
 th, td {
