--- a/CSS/style_historial_de_pagos.css
+++ b/CSS/style_historial_de_pagos.css
@@ -64,13 +64,13 @@ html, body {
   
   .regreso:hover {
     transform: scale(1.1);
-    background-color: #705feb;
+    background-color: #a71a60;
   }
   
   .regreso:active {
     transform: scale(1.3);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    background-color: #5743ee;
+    background-color: #721343;
   }
   .pago{
     padding: 10px 20px;
@@ -87,7 +87,7 @@ html, body {
   }
   /* Estilo general para la tabla */
   .table-container {
-    width: 100%;
+    width: 90%;
     overflow-x: auto; /* Permite el desplazamiento horizontal */
     padding: 10px; /* Espaciado para que la tabla no toque los bordes */
     margin-top: 20px;
