--- a/CSS/style_lista.css
+++ b/CSS/style_lista.css
@@ -67,12 +67,12 @@ form button {
 
 button:hover {
     transform: scale(1.1);
-    background-color: #705feb;
+    background-color: #a71a60;
 }
 button:active {
     transform: scale(1.3);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    background-color:#5743ee;
+    background-color:#721343;
     
   }
 .regreso{
@@ -92,6 +92,9 @@ input{
     width: 150px;
     border: none;
     border-radius: 5px;
+}
+input:focus{
+  box-shadow: 10px 4px 6px rgba(0, 0, 0, 0.23); /* Sombra para un efecto elegante */
 }
 
 table {
