--- a/CSS/style_salarios.css
+++ b/CSS/style_salarios.css
@@ -85,13 +85,13 @@ button {
 
 button:hover {
   transform: scale(1.1);
-  background-color: #705feb;
+  background-color: #a71a60;
 }
 
 button:active {
   transform: scale(1.3);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  background-color: #5743ee;
+  background-color: #721343;
 }
 
 .regreso {
