--- a/CSS/style_entradas.css
+++ b/CSS/style_entradas.css
@@ -16,6 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 1.5s ease-in-out;
 }
 
 .container {
@@ -26,16 +27,24 @@ body {
   width: 100%;
   height: auto;
   padding: 20px; /* Añadir padding para espaciado */
+  animation: slideInFromTop 1.5s ease-in-out;
 }
 
 img {
   width: 150px;
   height: auto;
+  animation: fadeIn 1.8s ease-in-out;
+  transition: transform 0.5s ease;
+}
+
+img:hover {
+  transform: rotate(360deg);
 }
 
 h1 {
   text-align: center; /* Centra el título */
   margin: 20px 0;
+  animation: fadeIn 2s ease-in-out;
 }
 
 .button-container {
@@ -44,6 +53,7 @@ h1 {
   align-items: center;
   gap: 10px;
   margin-top: -100px;
+  animation: slideInFromBottom 1.5s ease-in-out;
 }
 
 button {
@@ -61,12 +71,12 @@ button {
 }
 
 button:hover {
-  transform: scale(1.1);
+  transform: scale(1.1) rotate(-5deg);
   background-color: #a71a60;
 }
 
 button:active {
-  transform: scale(1.3);
+  transform: scale(1.2);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   background-color: #721343;
 }
@@ -80,6 +90,7 @@ button:active {
   margin-bottom: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra para destacar la tabla */
   border-radius: 8px; /* Bordes redondeados del contenedor */
+  animation: fadeIn 1.5s ease-in-out 0.5s;
 }
 
 table {
@@ -90,7 +101,6 @@ table {
   font-family: "Roboto", sans-serif;
   text-align: left;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  
 }
 
 th, td {
@@ -123,14 +133,14 @@ td {
   }
 }
 
-  button {
-    font-size: 14px;
-    width: 120px;
-  }
+button {
+  font-size: 14px;
+  width: 120px;
+}
 
-  img {
-    width: 100px;
-  }
+img {
+  width: 100px;
+}
 
 .card {
   background-color: #fff;
@@ -140,6 +150,7 @@ td {
   padding: 20px;
   margin: 20px;
   max-width: 500px;
+  animation: scaleUp 1.5s ease-in-out;
 }
 
 .card-content {
@@ -179,6 +190,17 @@ td {
 @keyframes slideInFromTop {
   from {
     transform: translateY(-50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFromBottom {
+  from {
+    transform: translateY(50px);
     opacity: 0;
   }
   to {
